objects/DMND_Duplicate__c.object
<CustomObject>
    <description>Potential Duplicates Generated from Demand Tool</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Potential_Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <formula>if(Account__c &lt;&gt; null, Account__r.Address1__c, if(Lead__c &lt;&gt; null, Lead__r.Address1__c, if(Contact__c &lt;&gt; null, Contact__r.Account.Address1__c, if(Opportunity__c &lt;&gt; null, Opportunity__r.Account.Address1__c, &apos;Not Applicable&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <formula>Account__r.Address2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>if(Account__c &lt;&gt; null, Account__r.City__c, if(Lead__c &lt;&gt; null, Lead__r.City__c, if(Contact__c &lt;&gt; null, Contact__r.Account.City__c, if(Opportunity__c &lt;&gt; null, Opportunity__r.Account.City__c, &apos;Not Applicable&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Potential_Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentUser__c</fullName>
        <formula>if( Related_Object_OwnerID__c== $User.Id ,&apos;A&apos;,&apos;B&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_is_Owner__c</fullName>
        <formula>if( $User.Id = Related_Object_OwnerID__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cust_ID__c</fullName>
        <formula>Account__r.AOPS_Cust_Id__c &amp; &quot;-&quot; &amp;  Account__r.AOPS_Seq_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cust ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <formula>if( Account__r.RecordType.Name = &quot;Site&quot;, Account__r.AOPS_Seq_ID__c ,
if( Account__r.RecordType.Name = &quot;Customer&quot; &amp;&amp; Account__r.Grandparent__c = &quot;No&quot;, Account__r.AOPS_Cust_Id__c,
if( Account__r.RecordType.Name = &quot;Customer&quot; &amp;&amp; Account__r.Grandparent__c = &quot;Yes&quot; &amp;&amp; LEN(Account__r.AOPS_Cust_Id__c) = 1, &quot;0000000&quot; + Account__r.AOPS_Cust_Id__c,
if( Account__r.RecordType.Name = &quot;Customer&quot; &amp;&amp; Account__r.Grandparent__c = &quot;Yes&quot; &amp;&amp; LEN(Account__r.AOPS_Cust_Id__c) = 2, &quot;000000&quot; + Account__r.AOPS_Cust_Id__c,
if( Account__r.RecordType.Name = &quot;Customer&quot; &amp;&amp; Account__r.Grandparent__c = &quot;Yes&quot; &amp;&amp; LEN(Account__r.AOPS_Cust_Id__c) = 3, &quot;00000&quot; + Account__r.AOPS_Cust_Id__c,
if( Account__r.RecordType.Name = &quot;Customer&quot; &amp;&amp; Account__r.Grandparent__c = &quot;Yes&quot; &amp;&amp; LEN(Account__r.AOPS_Cust_Id__c) = 4, &quot;0000&quot; + Account__r.AOPS_Cust_Id__c,
if( Account__r.RecordType.Name = &quot;Customer&quot; &amp;&amp; Account__r.Grandparent__c = &quot;Yes&quot; &amp;&amp; LEN(Account__r.AOPS_Cust_Id__c) = 5, &quot;000&quot; + Account__r.AOPS_Cust_Id__c,
if( Account__r.RecordType.Name = &quot;Customer&quot; &amp;&amp; Account__r.Grandparent__c = &quot;Yes&quot; &amp;&amp; LEN(Account__r.AOPS_Cust_Id__c) = 6, &quot;00&quot; + Account__r.AOPS_Cust_Id__c,
null
))))))))</formula>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Merge</fullName>
                </value>
                <value>
                    <fullName>Keep</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispostion_Reason__c</fullName>
        <label>Dispostion Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Restrictions</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Copy Print</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>Employee Purchase (EPP)</fullName>
                </value>
                <value>
                    <fullName>Export Account</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Internal Programs (Corp Use)</fullName>
                </value>
                <value>
                    <fullName>Managed Print Services</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>SPC Purchases</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Potential_Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_text__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Duplicate #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <formula>IF( Account__c &lt;&gt; null, Account__r.RecordType.Name , IF( Lead__c &lt;&gt; null, &apos;Lead&apos; , IF( Contact__c &lt;&gt; null, &apos;Contact&apos; , IF( Opportunity__c &lt;&gt; null, &apos;Opportunity&apos;,&apos;Not Applicable&apos; ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Potential_Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Disposition_Reason__c</fullName>
        <label>Other Disposition Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Duplicate_Warning__c</fullName>
        <label>Potential Duplicate Warning</label>
        <referenceTo>DMND_Potential_Warning__c</referenceTo>
        <relationshipName>Potential_Duplicates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Potential_Warning_Key__c</fullName>
        <formula>Potential_Duplicate_Warning__r.Warning_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Warning Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_Type__c</fullName>
        <formula>Account__r.Related_Account__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_ID__c</fullName>
        <formula>IF( Account__c &lt;&gt; null, Account__r.Id , IF( Lead__c &lt;&gt; null, Lead__r.Id , IF( Contact__c &lt;&gt; null, Contact__r.Id , IF( Opportunity__c &lt;&gt; null, Opportunity__r.Id,&apos;Not Applicable&apos; ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Object ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_Name__c</fullName>
        <formula>IF( Account__c &lt;&gt; null, Account__r.Name , IF( Lead__c &lt;&gt; null,   Lead__r.FirstName  &amp;&apos; &apos;&amp;  Lead__r.LastName   , IF( Contact__c &lt;&gt; null, Contact__r.FirstName &amp;&apos; &apos;&amp;  Contact__r.LastName , IF( Opportunity__c &lt;&gt; null, Opportunity__r.Name ,&apos;Not Applicable&apos; ) ) ) )</formula>
        <label>Related Object Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_OwnerID__c</fullName>
        <formula>IF( Account__c &lt;&gt; null, Account__r.OwnerId , IF( Lead__c &lt;&gt; null, Lead__r.OwnerId , IF( Contact__c &lt;&gt; null, Contact__r.OwnerId , IF( Opportunity__c &lt;&gt; null, Opportunity__r.OwnerId ,&apos;Not Applicable&apos; ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Object OwnerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_OwnerName__c</fullName>
        <formula>IF( Account__c &lt;&gt; null,  Account__r.Owner.FirstName &amp;&apos; &apos;&amp;Account__r.Owner.LastName  , IF( Lead__c &lt;&gt; null, Lead__r.Owner:User.FirstName &amp;&apos; &apos;&amp;Lead__r.Owner:User.LastName , IF( Contact__c &lt;&gt; null,  Contact__r.Owner.FirstName &amp;&apos; &apos;&amp;Contact__r.Owner.LastName  , IF( Opportunity__c &lt;&gt; null,  Opportunity__r.Owner.FirstName &amp;&apos; &apos;&amp;Opportunity__r.Owner.LastName ,&apos;Not Applicable&apos; ) ) ) )</formula>
        <label>Related Object OwnerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>if(Account__c &lt;&gt; null, TEXT(Account__r.State__c), if(Lead__c &lt;&gt; null, TEXT(Lead__r.State__c), if(Contact__c &lt;&gt; null, TEXT(Contact__r.Account.State__c), if(Opportunity__c &lt;&gt; null, TEXT(Opportunity__r.Account.State__c), &apos;Not Applicable&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Potential_Duplicates__c</fullName>
        <formula>Potential_Duplicate_Warning__r.Total_Potential_Duplicates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Potential Duplicates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_TY__c</fullName>
        <formula>if(Account__c &lt;&gt; null, Account__r.YTD_Sales_TY__c, if(Contact__c &lt;&gt; null, Contact__r.Account.YTD_Sales_TY__c, if(Opportunity__c &lt;&gt; null, Opportunity__r.Account.YTD_Sales_TY__c, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Sales TY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Sales_LY__c</fullName>
        <formula>if(Account__c &lt;&gt; null, Account__r.Year_LY__c, if(Contact__c &lt;&gt; null, Contact__r.Account.Year_LY__c, if(Opportunity__c &lt;&gt; null, Opportunity__r.Account.Year_LY__c, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Sales LY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>if(Account__c &lt;&gt; null, Account__r.Zip__c, if(Lead__c &lt;&gt; null, Lead__r.Zip__c, if(Contact__c &lt;&gt; null, Contact__r.Account.Zip__c, if(Opportunity__c &lt;&gt; null, Opportunity__r.Account.Zip__c, &apos;Not Applicable&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <label>My Duplicates</label>
    <nameField>
        <displayFormat>Duplicate-{0}</displayFormat>
        <label>Potential Duplicate #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Duplicates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DispositionDescription</fullName>
        <active>true</active>
        <errorConditionFormula>Text(Disposition__c)==&apos;Keep&apos; &amp;&amp; Text(Dispostion_Reason__c)==&apos;&apos;</errorConditionFormula>
        <errorDisplayField>Dispostion_Reason__c</errorDisplayField>
        <errorMessage>Please give a reason to keep the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DispostionReasonDiscribtion</fullName>
        <active>true</active>
        <errorConditionFormula>(Text(Dispostion_Reason__c) ==&apos;Others&apos; &amp;&amp; (ISNULL(Other_Disposition_Reason__c) || ISBLANK(Other_Disposition_Reason__c)))</errorConditionFormula>
        <errorDisplayField>Other_Disposition_Reason__c</errorDisplayField>
        <errorMessage>Please give a reason to keep the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Potential_Duplicate_based_record</fullName>
        <active>true</active>
        <errorConditionFormula>((Account__c &lt;&gt; null &amp;&amp; (  Contact__c  &lt;&gt; null ||  Lead__c &lt;&gt; null ||  Opportunity__c &lt;&gt; null )) || ( Contact__c  &lt;&gt; null &amp;&amp; ( Account__c &lt;&gt; null ||  Lead__c &lt;&gt; null ||  Opportunity__c &lt;&gt; null )) || ( Lead__c &lt;&gt; null &amp;&amp; ( Account__c &lt;&gt; null ||  Contact__c  &lt;&gt; null ||  Opportunity__c &lt;&gt; null )) || ( Opportunity__c &lt;&gt; null &amp;&amp; ( Account__c &lt;&gt; null ||  Contact__c  &lt;&gt; null ||  Lead__c &lt;&gt; null )) )</errorConditionFormula>
        <errorMessage>Only one base object record can be related with one Potential Duplicate.</errorMessage>
    </validationRules>
</CustomObject>